# ssm-get-parameter

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_alpine.sh
build_scripts/: Dockerfile  build.sh
go/: .dockerignore  .gitignore  Dockerfile  Makefile  go.mod  main.go
src/: main.rs
