[package]
name = "ssm-get-parameter"
version = "0.1.0"
authors = ["Takeshi Horiuchi <keshihoriuchi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
rusoto_core = "0.45.0"
rusoto_ssm = "0.45.0"
tokio = "0.2"